--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -51,3 +51,27 @@
         animation-fill-mode: backwards;/* apply the style of the zero percent before the animation starts*/
     }
 }
+
+.btn-text{
+    &:link,
+    &:visited{
+        color: $color-primary;
+        text-decoration: none;
+        font-size: $default-font-size;
+        border-bottom: 1px solid $color-primary;
+        padding-bottom: 3px;
+        padding: 0 .3rem;
+        display: inline-block;
+        transition: all .2s
+    }
+    &:hover{
+        color: $color-white;
+        background-color: $color-primary;
+        transform: translateY(-.5rem);
+        box-shadow: 0 .5rem .2rem rgba($color-grey-dark, .2)
+    }
+    &:active{
+        box-shadow: 0 .3rem .1rem rgba($color-grey-dark, .2);
+        transform: translateY(0);
+    }
+}
