completed the features section design

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,4 +10,10 @@
 @import "layouts/header";
 @import "layouts/grid";
 
-@import "components/button"; 
+@import "components/button";
+@import "components/composition";
+@import "components/feature-box";
+
+@import "pages/home";
+
+
