--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@
   /*so it will inherit from the box sizing of the body for all element*/ }
 
 html {
-  font-size: 10px; }
+  font-size: 62.5%; }
 
 body {
   font-family: "Lato", sans-serif;
@@ -75,6 +75,42 @@ body {
     animation-duration: 1.5s;
     animation-timing-function: ease-out; }
 
+.heading-secondary {
+  font-size: 3.5rem;
+  font-weight: 700;
+  background-image: linear-gradient(to right, #7ed56f, #28b485);
+  text-transform: uppercase;
+  display: inline-block;
+  -webkit-background-clip: text;
+  color: transparent;
+  letter-spacing: .2rem;
+  transition: all .2s; }
+  .heading-secondary:hover {
+    transform: skewY(2deg) skewX(20deg) scale(1.1);
+    text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.4); }
+
+.heading-tertiary {
+  text-transform: uppercase;
+  font-size: 1.6rem;
+  font-weight: 700; }
+
+.paragraph {
+  font-size: 1.6rem; }
+  .paragraph:not(:last-child) {
+    margin-bottom: 2rem; }
+
+.u-text-center {
+  text-align: center; }
+
+.u-m-bottom-big {
+  margin-bottom: 8rem; }
+
+.u-m-bottom-medium {
+  margin-bottom: 4rem; }
+
+.u-m-bottom-small {
+  margin-bottom: 2rem; }
+
 .header {
   height: 90vh;
   /* background-image: linear-gradient(to right, #7ed56f, #28b485),url(../img/hero.jpg) */
@@ -102,8 +138,7 @@ body {
 
 .row {
   max-width: 114rem;
-  margin: 0 auto;
-  background-color: #eee; }
+  margin: 0 auto; }
   .row::after {
     content: "";
     display: table;
@@ -113,9 +148,7 @@ body {
   .row [class^="col-"] {
     padding: 2rem;
     float: left;
-    margin: 0 auto;
-    color: #eee;
-    background-color: orangered; }
+    margin: 0 auto; }
     .row [class^="col-"]:not(:last-child) {
       margin-right: 4rem; }
   .row .col-1-of-2 {
@@ -177,3 +210,88 @@ body {
   animation: moveInDown .75s ease-out .75s;
   animation-fill-mode: backwards;
   /* apply the style of the zero percent before the animation starts*/ }
+
+.btn-text:link, .btn-text:visited {
+  color: #55c57a;
+  text-decoration: none;
+  font-size: 1.6rem;
+  border-bottom: 1px solid #55c57a;
+  padding-bottom: 3px;
+  padding: 0 .3rem;
+  display: inline-block;
+  transition: all .2s; }
+
+.btn-text:hover {
+  color: #fff;
+  background-color: #55c57a;
+  transform: translateY(-0.5rem);
+  box-shadow: 0 0.5rem 0.2rem rgba(119, 119, 119, 0.2); }
+
+.btn-text:active {
+  box-shadow: 0 0.3rem 0.1rem rgba(119, 119, 119, 0.2);
+  transform: translateY(0); }
+
+.composition {
+  position: relative; }
+  .composition__photo {
+    width: 55%;
+    position: absolute;
+    border-radius: 1rem;
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
+    z-index: 10;
+    transition: all .2s;
+    outline-offset: 1.5rem; }
+    .composition__photo--p1 {
+      top: -2rem;
+      left: 0; }
+    .composition__photo--p2 {
+      top: 5rem;
+      right: 0; }
+    .composition__photo--p3 {
+      top: 12rem;
+      right: 20%; }
+    .composition__photo:hover {
+      box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.6);
+      transform: scale(1.05) translateY(-1rem);
+      outline: 1rem solid #55c57a;
+      z-index: 20; }
+  .composition:hover .composition__photo:not(:hover) {
+    transform: scale(0.9); }
+
+.feature-box {
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 2rem;
+  font-size: 1.4rem;
+  text-align: center;
+  border-radius: 3px;
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.6);
+  transition: all .2s; }
+  .feature-box__icon {
+    font-size: 7rem;
+    margin-bottom: .5rem;
+    background-image: linear-gradient(to right, #7ed56f, #28b485);
+    -webkit-background-clip: text;
+    color: transparent; }
+  .feature-box:hover {
+    transform: translateY(-1.5rem); }
+
+.section-about {
+  background-color: #f7f7f7;
+  padding: 20rem 0;
+  margin-top: -18vh; }
+
+.section-features {
+  padding: 12rem 0;
+  transform: skewY(-7deg);
+  margin-top: -10rem;
+  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.698), rgba(40, 180, 133, 0.698)), url(../img/hero.jpg);
+  background-size: cover;
+  background-position: top; }
+  .section-features > * {
+    transform: skewY(7deg); }
+
+.section-tours {
+  padding: 25rem 0;
+  margin-top: -10rem;
+  background-color: #eee; }
