--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -8,6 +8,9 @@ $color-black: #000;
 
 $color-grey-light-1: #f7f7f7;
 
+//FONTS
+$default-font-size: 1.6rem;
+
 //GRID
 $grid-width: 114rem;
 $gutter-horizontal: 4rem;
