--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -31,3 +31,35 @@
         /* animation-iteration-count: 3; does the animation 3 times */
     }
 }
+
+.heading-secondary{
+    font-size: 3.5rem;
+    font-weight: 700;
+    background-image: linear-gradient(to right, $color-primary-lighter, $color-primary-darker);
+    text-transform: uppercase;
+    display: inline-block;
+    -webkit-background-clip: text;
+    color: transparent;
+    letter-spacing: .2rem;
+    transition: all .2s;
+
+    &:hover{
+        transform: skewY(2deg) skewX(20deg) scale(1.1);
+        text-shadow: .5rem 1rem 2rem rgba(0, 0, 0, .4)
+    }
+}
+
+.heading-tertiary{
+    text-transform: uppercase;
+    font-size: $default-font-size;
+    font-weight: 700;
+
+}
+
+.paragraph{
+    font-size: $default-font-size;
+
+    &:not(:last-child){
+        margin-bottom: 2rem
+    }
+}
