--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,4 +1,26 @@
 .section-about{
-    background-color: $colour-grey-light-1;
+    background-color: $color-grey-light-1;
     padding: 20rem 0;
+    margin-top: -18vh
+}
+.section-features{
+    padding: 12rem 0;
+    transform: skewY(-7deg);
+    margin-top: -10rem;
+    background-image: linear-gradient(
+        to right bottom, 
+        rgba($color-primary-lighter, 0.698), 
+        rgba($color-primary-darker, 0.698)
+        ),
+        url(../img/hero.jpg);
+    background-size: cover; 
+    background-position: top;
+    & > * {// this is a direct child selector to select all the direct child only & * this will select all the posible child
+        transform: skewY(7deg)
+    }
+}
+.section-tours{
+    padding: 25rem 0;
+    margin-top: -10rem;
+    background-color: #eee;
 }
