--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -6,6 +6,14 @@ $color-grey-dark: #777;
 $color-white: #fff;
 $color-black: #000;
 
+$color-secondary: #ff6c36;
+$color-secondary-darker: #ff4500;
+$color-secondary-lighter: #ff7c4b;
+
+$color-tertiary: #1000ff;
+$color-tertiary-lighter: #4236ff;
+$color-tertiary-darker: #0201c1;
+
 $color-grey-light-1: #f7f7f7;
 
 //FONTS
