--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -32,6 +32,13 @@
             background-color: $color-white;
         }
     }
+    &--green{
+        color: $color-white;
+        background-color: $color-primary;
+        &::after{
+            background-color: $color-primary;
+        }
+    }
 
     &::after{
         content: ""; /*this is compulsory for an after sudo element*/
