--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,7 +13,9 @@
 @import "components/button";
 @import "components/composition";
 @import "components/feature-box";
+@import "components/card";
 
-@import "pages/home";
+@import "pages/home";   
 
 
+    
