--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -20,7 +20,7 @@
     }
 }
 .section-tours{
-    padding: 25rem 0;
+    padding: 25rem 0 10rem 0;
     margin-top: -10rem;
     background-color: #eee;
 }
