completed the stories ection of the natours project

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,10 +10,12 @@
 @import "layouts/header";
 @import "layouts/grid";
 
+@import "components/bg-video";
 @import "components/button";
 @import "components/composition";
 @import "components/feature-box";
 @import "components/card";
+@import "components/story";  
 
 @import "pages/home";   
 
