--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -24,3 +24,8 @@
     margin-top: -10rem;
     background-color: #eee;
 }
+.section-stories{
+    padding: 5rem 0;
+    // background-color: #eee;
+    position: relative;
+}
