--- a/css/style.css
+++ b/css/style.css
@@ -167,6 +167,20 @@ body {
   .row .col-3-of-4 {
     width: calc(3*((100% - 12rem)/4) + (2*4rem)); }
 
+.bg-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  opacity: .3;
+  overflow: hidden; }
+  .bg-video__contect {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; }
+
 .btn:link, .btn:visited {
   text-transform: uppercase;
   text-decoration: none;
@@ -379,6 +393,58 @@ body {
     font-size: 6rem;
     font-weight: 200; }
 
+.story {
+  width: 75%;
+  margin: 5rem auto;
+  box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  padding: 3rem;
+  padding-left: 5rem;
+  background-color: rgba(255, 255, 255, 0.6);
+  font-size: 1.6rem;
+  transform: skewX(-12deg); }
+  .story::after {
+    content: "";
+    display: table;
+    clear: both; }
+  .story__shape {
+    width: 13rem;
+    height: 13rem;
+    float: left;
+    overflow: hidden;
+    shape-outside: circle(50% at 50% 50%);
+    -webkit-shape-outside: circle(50% at 50% 50%);
+    clip-path: circle(50% at 50% 50%);
+    -webkit-clip-path: circle(50% at 50% 50%);
+    transform: translateX(-2rem) skewX(12deg);
+    position: relative; }
+  .story__img {
+    height: 100%;
+    background-size: cover;
+    transform: translateX(-3rem) scale(1.3);
+    backface-visibility: hidden;
+    transition: all .2s; }
+  .story__text {
+    transform: skewX(12deg); }
+  .story__caption {
+    text-transform: uppercase;
+    color: #fff;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 10%);
+    text-align: center;
+    font-size: 1.7rem;
+    opacity: 0;
+    transition: all .2s;
+    backface-visibility: hidden; }
+  .story:hover .story__caption {
+    transform: translate(-50%, -50%);
+    opacity: 1; }
+  .story:hover .story__img {
+    transform: translateX(-3rem) scale(1);
+    filter: blur(3px) brightness(80%); }
+
 .section-about {
   background-color: #f7f7f7;
   padding: 20rem 0;
@@ -398,3 +464,7 @@ body {
   padding: 25rem 0 10rem 0;
   margin-top: -10rem;
   background-color: #eee; }
+
+.section-stories {
+  padding: 5rem 0;
+  position: relative; }
