--- a/css/style.css
+++ b/css/style.css
@@ -299,6 +299,41 @@ body {
   .feature-box:hover {
     transform: translateY(-1.5rem); }
 
+.form {
+  width: 40%; }
+  .form__group:not(:last-child) {
+    padding-bottom: 2rem; }
+  .form__field {
+    font-size: 1.6rem;
+    font-family: inherit;
+    padding: 1.5rem 2rem;
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 3px;
+    border: none;
+    transition: all .2s;
+    border-bottom: 3px solid transparent; }
+    .form__field:focus {
+      border-bottom: 3px solid #55c57a;
+      outline: none;
+      box-shadow: 0 1.5rem 2rem rgba(0, 0, 0, 0.2);
+      transform: translateY(-0.5rem); }
+    .form__field:focus:invalid {
+      border-bottom: 3px solid #ff4500; }
+    .form__field::-webkit-input-placeholder {
+      color: #999; }
+  .form__label {
+    font-size: 1.2rem;
+    font-weight: 700;
+    margin-left: 2rem;
+    margin-top: .7rem;
+    display: block;
+    transition: all .2s; }
+  .form__field:placeholder-shown + .form__label {
+    opacity: 0;
+    visibility: hidden;
+    transform: translateY(-4px); }
+
 .card {
   perspective: 150rem;
   -moz-perspective: 150rem;
@@ -468,3 +503,15 @@ body {
 .section-stories {
   padding: 5rem 0;
   position: relative; }
+
+.section-book {
+  padding: 8rem 0;
+  background-image: linear-gradient(to bottom right, #7ed56f, #28b485); }
+
+.book {
+  background-image: linear-gradient(110deg, rgba(255, 255, 255, 0.85) 0%, rgba(255, 255, 255, 0.85) 50%, transparent 50%), url(../img/nat-10.jpg);
+  height: 50rem;
+  background-size: cover;
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.3);
+  border-radius: 5px;
+  padding: 4rem; }
