--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -29,3 +29,19 @@
     // background-color: #eee;
     position: relative;
 }
+.section-book{
+    padding: 8rem 0;
+    background-image: linear-gradient(to bottom right, $color-primary-lighter, $color-primary-darker)
+}
+.book{
+    background-image: linear-gradient(110deg, 
+                                    rgba($color-white, .85) 0%,
+                                    rgba($color-white, .85) 50%,
+                                    transparent 50%),
+                                    url(../img/nat-10.jpg);
+    height: 50rem;
+    background-size: cover;
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, .3);
+    border-radius: 5px;
+    padding: 4rem;  
+}
