--- a/css/style.css
+++ b/css/style.css
@@ -181,7 +181,7 @@ body {
     height: 100%;
     object-fit: cover; }
 
-.btn:link, .btn:visited {
+.btn, .btn:link, .btn:visited {
   text-transform: uppercase;
   text-decoration: none;
   padding: 1.5rem 4rem;
@@ -189,7 +189,9 @@ body {
   transition: all .2s;
   border-radius: 100px;
   position: relative;
-  font-size: 1.6rem; }
+  font-size: 1.6rem;
+  cursor: pointer;
+  border: none; }
 
 .btn:hover {
   transform: translateY(-3px);
@@ -198,7 +200,8 @@ body {
     opacity: 0;
     transform: scale(1.5); }
 
-.btn:active {
+.btn:active, .btn:focus {
+  outline: none;
   transform: translateY(-1px);
   /*in relation to the original position not the hover position*/
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
@@ -312,7 +315,7 @@ body {
     border-radius: 3px;
     border: none;
     transition: all .2s;
-    border-bottom: 3px solid transparent; }
+    border: 1px solid #ccc; }
     .form__field:focus {
       border-bottom: 3px solid #55c57a;
       outline: none;
@@ -333,6 +336,40 @@ body {
     opacity: 0;
     visibility: hidden;
     transform: translateY(-4px); }
+  .form__radio-label {
+    font-size: 1.6rem;
+    position: relative;
+    cursor: pointer;
+    padding-left: 3rem; }
+  .form__radio-group {
+    width: 45%;
+    display: inline-block; }
+  .form__radio-button {
+    position: absolute;
+    width: 2.5rem;
+    height: 2.5rem;
+    top: 0;
+    left: 0;
+    border-radius: 50%;
+    border: 3px solid #55c57a;
+    transform: translateY(-0.5rem); }
+    .form__radio-button::after {
+      content: "";
+      display: block;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 1.4rem;
+      height: 1.4rem;
+      background-color: #55c57a;
+      border-radius: 50%;
+      opacity: 0;
+      transition: all .2s; }
+  .form__radio-input {
+    display: none; }
+  .form__radio-input:checked + .form__radio-label .form__radio-button:after {
+    opacity: 1; }
 
 .card {
   perspective: 150rem;
