--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,4 +1,5 @@
 .btn{
+    &,
     &:link,
     &:visited{
         text-transform: uppercase;
@@ -8,7 +9,11 @@
         transition: all .2s;
         border-radius: 100px;
         position: relative;
-        font-size: 1.6rem
+        font-size: 1.6rem;
+
+        //for button element
+        cursor: pointer;
+        border: none;
     }
 
     &:hover{
@@ -20,7 +25,9 @@
         }
     }
 
-    &:active{
+    &:active,
+    &:focus{
+        outline: none;
         transform: translateY(-1px); /*in relation to the original position not the hover position*/
         box-shadow: 0 .5rem 1rem rgba($color-black, .2)
     }
