--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,7 +1,10 @@
 //COLOURS
-$color-primary: #55c57a;
-$color-primary-lighter: #7ed56f;
-$color-primary-darker: #28b485;
+// $color-primary: #55c57a;
+// $color-primary-lighter: #7ed56f;
+// $color-primary-darker: #28b485;
+$color-primary: #f504ad;
+$color-primary-lighter: #ff3399;
+$color-primary-darker: #c20479;
 $color-grey-dark: #777;
 $color-white: #fff;
 $color-black: #000;
