--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,7 @@
 @import "base/utilities";
 
 @import "layouts/header";
+@import "layouts/footer";
 @import "layouts/grid";
 
 @import "components/bg-video";
