--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,16 +10,14 @@
 @import "layouts/header";
 @import "layouts/footer";
 @import "layouts/grid";
-
+@import "layouts/navigation";
+@import "layouts/popup";
 @import "components/bg-video";
 @import "components/button";
 @import "components/composition";
 @import "components/feature-box";
 @import "components/form";
 @import "components/card";
-@import "components/story";  
+@import "components/story";
 
-@import "pages/home";   
-
-
-    
+@import "pages/home";
