--- a/sass/layouts/_popup.scss
+++ b/sass/layouts/_popup.scss
@@ -1,4 +1,86 @@
 .popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba($color-black, 0.85);
+  //   opacity: 0.85; //when you set an element to a certain opacity every thing in that element get the opacity automatically and hence
+  // but when you set the background color a little transparent all the element inside still retain there firm opacity
+  z-index: 2500;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.8s ease-out;
+
+  &:target {
+    opacity: 1;
+    visibility: visible;
+  }
+
+  &:target &__content {
+    opacity: 1;
+    transform: translate(-50%, -50%) rotate(0) scale(1);
+  }
+
   &__content {
+    width: 90%;
+    background-color: $color-white;
+    border-radius: 1rem;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(-355deg) scale(0.1);
+    opacity: 1;
+    transition: all 0.3s 0.2s;
+    box-shadow: 0 2rem 4rem rgba($color-black, 0.2);
+    overflow: hidden;
+    display: table;
+  }
+  &__left {
+    width: 33.33333%;
+    display: table-cell;
+  }
+  &__right {
+    width: 66.666667%;
+    display: table-cell;
+    vertical-align: middle; //aprt from middle we have top and buttom
+    padding: 3rem 5rem;
+  }
+  &__img {
+    display: block;
+    // height: 100%;
+    object-fit: cover;
+    width: 100%;
+  }
+  &__text {
+    font-size: 1.4rem;
+    margin-bottom: 4rem;
+    column-count: 2;
+    // colomn-gap: 4rem;
+    // colomn-rule: 1 px solid #eee;
+    hyphens: auto;
+    -moz-hyphens: auto;
+    -webkit-hyphens: auto;
+    -ms-hyphens: auto;
+  }
+  &__close {
+    &:link,
+    &:visited {
+      color: #333;
+      position: absolute;
+      top: 2.5rem;
+      right: 2.5rem;
+      font-size: 3rem;
+      cursor: pointer;
+      text-decoration: none;
+      display: inline-block;
+      line-height: 0;
+      transition: all 0.2s;
+    }
+
+    &:hover,
+    &:active {
+      color: $color-primary;
+    }
   }
 }
